# teamtalk-telegram-sender-rs

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  GEMINI.md  LICENSE  README.md  config.toml.example  docker-compose.yml  lefthook-local.example.yml  lefthook.yml
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml
.sqlx/: query-0103192bf60b981bb1a180183d2bb703fdf378417fc9ff212120c380965e8edf.json  query-055628907bbeed93571e21ef7d32632314012052136032091ccfd2ba856bd3c2.json  query-05c33c4ea9dd88f58903b964c3887c11ec6dfbc85adbeef29cd741be8aeda950.json  query-062e9d33db541f11da4b017bc2ae3a78f0b86f912ee5ba14138dbc0ebad0d358.json  query-063bb2ee51da6aace32df0fb3065c83b7dad72c5cce88211264f9afbba6213a2.json  query-10dae1f79968f75c63446e46d34a7744bc27b34e0017031971f7a570f4aeead0.json  query-142f2d1e9a395e3a9839a9b37d9ca78b489e8593e4d85d1e4fc7401fb6f0cb1a.json  query-15416c6fdb558416bc0309d7bda05470986aae0c00b0782112b9478c5c9207bd.json  query-1834d7d25377a840d8d59dec4691e5664f8510cfaaca991874748e0e928e70dc.json  query-2165b5cc4d589dd9a87e47a7ae82dd3afe658c50f94e12d84fd49e9c411a2873.json  query-2a9c870f8fc9d7a9f1447047cc2cc8cca763f2aa58997c766b63e26f7ce16ef4.json  query-2f67cb069d39dee95b128c793d794ba97fef98d4b84a0b6611dc4fe4b8048df4.json  query-35a3abbb2c59ef757162f4b6451e5a9baf8a62ad64c90b83f4cbbc6d848351f6.json  query-36998c4d75c95a9347a0257f287709a6739882c7a5c688acf99d1243002934bd.json  query-3c5e82418f29d6fe11c40058ce2ce513a69f4525beba3aaab8f7e6f1e738d45b.json  query-3c8f07c6ed2462cc7755bc3bc836b94bb1b3002b210a5cdc1e0d6374488c1068.json  query-3e0bed0c85e367bfd57737f0c51cefb5e65f42e95894afb83c588bd25295d101.json  query-41e81f37332d714ef9558b76114d439acbd8118d93c027db36a3bad0ecd367fd.json  query-422132509dd76f4f3c1cef8744758c3424b62191635ad0d259a8fc8699521746.json  query-49165aa59dc0b9671b69dc5444545a46816fd3dc5608a67169446a15bcbc07d8.json  query-4d06165b3b8085249299f4a9de4277ef81e8a1fde87dfb7058fa097a985e8f07.json  query-5f82d4895fe2a444c01cc44f30e4d4ed33b4ccde52bce49bf19231d9a32e6526.json  query-62d0e8f5c510f5640d267cfcffe62e37a751a1f8d9dc7e2b132b1702352d6219.json  query-74b7f3e957593baa801818e5bb91c91e4d3084180c2e90b0e33045519cb23359.json  query-7879c5a8f0957d8023b94e0a682c3c0ccfa3e4e77d096c9f6f1d0a3e7c8c00a9.json  query-805f43de6fbfea0a51a821c90209c813e9e8520af9f8166e1d61f9caf32dcdf9.json  query-8d39cd1619f28b7347fb0c94bf58c68821fc915e320860f4bcb6bab93d90967f.json  query-903ca557987e6a5c462685248ef958451196ac17c255eb94eebba0dd28d04083.json  query-a2a801d6fea79e7f39125b39c55a13e7e75154ef594d037387622225c3de85e8.json  query-b0596ace9e277217ee5e3923d1e179845219e76f433e9572960be64d0f95a300.json  query-b3f76b0495cf0fc220404541fed450e439c5f316dafd45154e9ef3f38e83507b.json  query-b69e003de240133b20df7945f8348ece4a3a715c23f0b82707defa2c972918a2.json  query-be3369f3727bb46d7b884128186119d960136c8687850c5724ea36992c01eb1e.json  query-c5051bc1d36e9f0f1260ddca9f51ab7f4fb98c571522122258533ed695d9c2bb.json  query-ce74b9168c0ce2287e972755e0492ee17d15414c174f51b0fa1f3af595ed780c.json  query-cf7a7c69c085d3464ac5a74a081597bbfb3c0021b0a698ed87ea73c57e47ec79.json  query-e2ba2c55494b7586127da1110c50aa73f7b23b08f45705e949b2ced72b9c64c1.json  query-e36ce8e25b17bd2219419214e50c1d76da78a3c9d90324711242fe366a7a8b54.json  query-e547ef8e0827f6a6709546e89c4416fe8eb1af6c0ab2e9c532753df8cbf5fe64.json  query-eb8afef13aa46b627cace6e15261923ea5f082e52af231e77cccad9b6df98d4c.json  (+3 more)
locales/en/: messages.ftl
locales/ru/: messages.ftl
migrations/: 20260109092909_initial_schema.sql  20260112000000_pending_replies.sql  20260112001000_pending_reply_indexes.sql  20260118090000_muted_users_list_mode.sql  20260127070000_check_constraints_and_indexes.sql  20260127160000_cleanup_orphan_mutes.sql
src/: bridge.rs  config.rs  locales.rs  main.rs  types.rs
src/adapters/: bridge.rs  mod.rs
src/adapters/tg/: callbacks.rs  commands.rs  keyboards.rs  mod.rs  settings_logic.rs  state.rs  utils.rs
src/app/: services.rs
src/bootstrap/: app.rs  config.rs
src/core/: callbacks.rs  mod.rs  shutdown.rs  types.rs
src/db/: admins.rs  bans.rs  deeplinks.rs  mod.rs  mutes.rs  pending_channel_replies.rs  pending_replies.rs  subscriptions.rs  types.rs  user_settings.rs
src/infra/: locales.rs  mod.rs
src/infra/db/: bans.rs  (+9 more)
src/tg_bot/: callbacks.rs  callbacks_types.rs  commands.rs  keyboards.rs  mod.rs  settings_logic.rs  state.rs  utils.rs
src/tt_worker/: commands.rs  events.rs  mod.rs  reports.rs
tests/unit/: app_admin_cleanup.rs  app_deeplink.rs  app_user_settings.rs  bootstrap_config.rs  core_callbacks.rs  core_types.rs  infra_db_admins.rs  infra_db_bans.rs  infra_db_deeplinks.rs  infra_db_mutes.rs  infra_db_pending_channel_replies.rs  infra_db_pending_replies.rs  infra_db_subscriptions.rs  infra_db_user_settings.rs  infra_locales.rs  tg_keyboards.rs  tt_events.rs  tt_mod.rs
(+38 files in other folders)
