[package]
name = "teamtalk-telegram-sender-rs"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true              # "Fat" LTO
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3

[dependencies]
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal"] }
teloxide = { version = "0.17", default-features = false, features = ["macros", "native-tls", "ctrlc_handler"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-native-tls", "sqlite", "chrono", "macros", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
dashmap = "6.1"
uuid = { version = "1.7", features = ["v4", "fast-rng"] }
teamtalk = "1.0"
fluent-templates = { version = "0.13", features = ["macros"] }
unic-langid = "0.9"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
