[package]
name = "teamtalk-telegram-sender-rs"
version = "0.5.0"
edition = "2024"

[profile.release]
lto = true              # "Fat" LTO
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3

[dependencies]
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal"] }
tokio-util = "0.7"
teloxide = { version = "0.17", default-features = false, features = ["macros", "native-tls"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-native-tls", "sqlite", "chrono", "macros", "migrate"] }
serde = { version = "1.0.228", features = ["derive"] }
postcard = { version = "1.1.3", features = ["use-std"] }
z85 = "3.0.6"
toml = "0.9"
derive_more = { version = "2.1", features = ["from"] }
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
uuid = { version = "1.7", features = ["fast-rng", "v7"] }
teamtalk = "1.0"
fluent-templates = { version = "0.13", features = ["macros"] }
unic-langid = "0.9"
self_update = { version = "0.42", features = ["archive-zip", "archive-tar", "compression-zip-deflate", "compression-flate2"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-futures = "0.2"
