[package]
name = "teamtalk-telegram-sender-rs"
version = "0.6.1"
edition = "2024"
license = "MIT"
description = "TeamTalk 5 to Telegram bridge bot"
repository = "https://github.com/kirill-jjj/teamtalk-telegram-sender-rs"
keywords = ["teamtalk", "telegram", "bot", "bridge", "rust"]
categories = ["network-programming", "asynchronous"]

[profile.release]
lto = true              # "Fat" LTO
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3

[dependencies]
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "net", "time", "sync", "signal"] }
tokio-util = "0.7"
teloxide = { version = "0.17", default-features = false, features = ["macros", "native-tls"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-native-tls", "sqlite", "chrono", "macros", "migrate"] }
serde = { version = "1.0.228", features = ["derive"] }
postcard = { version = "1.1.3", features = ["use-std"] }
z85 = "3.0.6"
toml = "0.9"
derive_more = { version = "2.1", features = ["from"] }
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
uuid = { version = "1.7", features = ["fast-rng", "v7"] }
teamtalk = { version = "1.0", features = ["async"] }
fluent-templates = { version = "0.13", features = ["macros"] }
unic-langid = "0.9"
self_update = { version = "0.42", features = ["archive-zip", "archive-tar", "compression-zip-deflate", "compression-flate2"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-futures = "0.2"
futures = "0.3.31"

[lints.clippy]
all = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
print_stdout = "deny"
print_stderr = "deny"
multiple_crate_versions = "allow"

[lints.rust]
warnings = "deny"
future_incompatible = { level = "deny", priority = -1 }
rust_2021_compatibility = { level = "deny", priority = -1 }
rust_2024_compatibility = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
unused = { level = "deny", priority = -1 }
missing_docs = "deny"
